--- a/examples/simple/package.json
+++ b/examples/simple/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "dependencies": {
     "@mui/material": "latest",
-    "gatsby": "latest",
+    "gatsby": "^4",
     "gatsby-theme-material-ui": "^5.3.0",
     "react": "latest",
     "react-dom": "latest"
